<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="etQueryHint">Enter Search Term</string>
    <string name="btSearchText">Search</string>
    <string name="action_bar_title">Grid Image Search</string>
    <string name="title_activity_save_settings">SaveSettingsActivity</string>
    <string name="image_size_label">Image Size</string>
    <string name="image_color_label">Color Filter</string>
    <string name="image_type_lable">Image Type</string>
    <string name="image_site_filter">Site Filter</string>
    <string name="bt_save_label">Save</string>
    <string name="bt_cancel_label">Cancel</string>
    <string name="bt_reset_label">Reset</string>
    <string name="share_image_label">Share Image</string>

</resources>
