<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveSettingsActivity" >

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/image_size_label" />

    <EditText
        android:id="@+id/etImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="openImageSizeDialog"
        android:editable="false"
        android:ems="10" >

    </EditText>

    <EditText
        android:id="@+id/etColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etImageSize"
        android:layout_alignTop="@+id/tvColorFilter"
        android:onClick="openColorFilterDialog"
        android:editable="false"
        android:ems="10" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/etImageSize"
        android:layout_marginTop="18dp"
        android:text="@string/image_color_label" />

    <EditText
        android:id="@+id/etImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etColorFilter"
        android:layout_alignTop="@+id/tvImageType"
        android:onClick="openImageTyeDialog"
        android:editable="false"
        android:ems="10" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/etColorFilter"
        android:layout_marginTop="25dp"
        android:text="@string/image_type_lable" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etImageType"
        android:layout_marginTop="24dp"
        android:text="@string/image_site_filter" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSiteFilter"
        android:ems="10" />

    <Button
        android:id="@+id/btSave"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etSiteFilter"
        android:onClick="saveSettingChanges"
        android:text="@string/bt_save_label" >
        
        <requestFocus />
        
     </Button>

    <Button
        android:id="@+id/btCancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btSave"
        android:layout_alignBottom="@+id/btSave"
        android:layout_toRightOf="@+id/btSave"
        android:onClick="cancelSettingChanges"
        android:text="@string/bt_cancel_label" />

    <Button
        android:id="@+id/btReset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btCancel"
        android:layout_toRightOf="@+id/btCancel"
        android:onClick="resetSettingChanges"
        android:text="@string/bt_reset_label" />

</RelativeLayout>
